refactor : S3 업로드 로직 리펙토링 - 테스트 코드 수정 완료

--- a/build.gradle
+++ b/build.gradle
@@ -84,6 +84,9 @@ dependencies {
     testImplementation 'com.h2database:h2'
     testImplementation 'org.instancio:instancio-junit:5.4.0'
 
+    //S3
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
     // TestContainers (필요시 주석 해제)
     // testImplementation 'org.testcontainers:junit-jupiter'
     // testImplementation 'org.testcontainers:postgresql'
