--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -55,3 +55,5 @@ kakao:
 
 jwt:
   secret: ${JWT_SECRET}
+  access-token-expiration-ms: ${JWT_ACCESS_TOKEN_EXPIRATION_MS}
+  refresh-token-expiration-ms: ${JWT_REFRESH_TOKEN_EXPIRATION_MS}
