--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,43 +1,47 @@
 spring:
   application:
     name: O-ZANG
+
   datasource:
-    url: jdbc:h2:mem:testdb;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
+    url: jdbc:postgresql://localhost:5432/postgres
+    username: postgres
+    password: password
+    driver-class-name: org.postgresql.Driver
+    hikari:
+      connection-timeout: 30000
+      idle-timeout: 600000
+      max-lifetime: 1800000
+      maximum-pool-size: 10
+      minimum-idle: 5
+      connection-test-query: SELECT 1
 
-    jpa:
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
       hibernate:
-        ddl-auto: create-drop
-      properties:
-        hibernate:
-          format_sql: true
-          show_sql: true
-          dialect: org.hibernate.dialect.H2Dialect
-      open-in-view: false
+        format_sql: true
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        jdbc:
+          lob:
+            non_contextual_creation: true
+    open-in-view: false
 
-    h2:
-      console:
-        enabled: true
-        path: /h2-console
+  batch:
+    job:
+      enabled: false
+#    jdbc:
+#      initialize-schema: never
 
-    batch:
-      job:
-        enabled: false
-      jdbc:
-        initialize-schema: always
+logging:
+  level:
+    root: INFO
+    com.fourthread.ozang: DEBUG
+    org.springframework.web: DEBUG
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
 
-  logging:
-    level:
-      root: INFO
-      com.fourthread.ozang: DEBUG
-      org.springframework.web: DEBUG
-      org.springframework.batch: INFO
-      org.hibernate.SQL: DEBUG
-      org.hibernate.type.descriptor.sql.BasicBinder: TRACE
-
-  # ??? API ??
 weather:
   api:
     key:  ${WEATHER_API_KEY}
@@ -47,7 +51,6 @@ weather:
     forecast:
       url: ${weather.api.base-url}/getVilageFst
 
-  # ??? API ??
 kakao:
   api:
     key: ${KAKAO_API_KEY}
