--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,10 @@ springBoot {
     buildInfo()
 }
 
+ext {
+    querydslVersion = '5.1.0'
+}
+
 dependencies {
     // Spring Boot Starters
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -54,7 +58,7 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql'
 
     // QueryDSL
-    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    implementation "com.querydsl:querydsl-jpa:${querydslVersion}:jakarta"
     annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
