--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
     properties:
       mail:
         smtp:
-          auth: true
+          auth: trueㅒ
           starttls:
             enable: true
 
@@ -25,7 +25,7 @@ spring:
         registration:
           kakao:
             client-id: ${KAKAO_RESTAPI_KEY}
-            redirect-uri: ${KAKAO_REDIRECT_URI}
+            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
             authorization-grant-type: authorization_code
             client-authentication-method: none
             client-name: Kakao
@@ -35,7 +35,7 @@ spring:
           google:
             client-id: ${GOOGLE_CLIENT_ID}
             client-secret: ${GOOGLE_SECRET}
-            redirect-uri: "http://localhost:8080/login/oauth2/code/google"
+            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
             authorization-grant-type: authorization_code
             scope:
               - profile
