--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,10 @@ spring:
           auth: trueㅒ
           starttls:
             enable: true
+  data:
+    redis:
+      host: localhost
+      port: 6379
 
   security:
     oauth2:
