feat :Redis Config 등록

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
     properties:
       mail:
         smtp:
-          auth: trueㅒ
+          auth: true
           starttls:
             enable: true
   data:
