--- a/build.gradle
+++ b/build.gradle
@@ -107,6 +107,9 @@ dependencies {
     // java mail
     implementation 'org.springframework.boot:spring-boot-starter-mail'
 
+    // monitoring
+    implementation 'io.micrometer:micrometer-registry-prometheus'
+
     // TestContainers (필요시 주석 해제)
     // testImplementation 'org.testcontainers:junit-jupiter'
     // testImplementation 'org.testcontainers:postgresql'
