--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -77,3 +77,25 @@ admin:
 security:
   temp-password:
     expiration-hours: 1
+
+
+management:
+  info:
+    java:
+      enabled: true
+    os:
+      enabled: true
+  server:
+    port: 8080
+  endpoint:
+    health:
+      show-components: always
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
+server:
+  tomcat:
+    mbeanregistry:
+      enabled: true
