--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GRADLE_OPTS: -Dorg.gradle.daemon=false
+      TZ: Asia/Seoul
+      JAVA_OPTS: -Duser.timezone=Asia/Seoul
       KAKAO_API_KEY: ${{ secrets.KAKAO_API_KEY }}
       WEATHER_API_KEY: ${{ secrets.WEATHER_API_KEY }}
       JWT_SECRET : ${{secrets.JWT_SECRET}}
@@ -18,12 +20,17 @@ jobs:
       ADMIN_PASSWORD : ${{secrets.ADMIN_PASSWORD}}
       ADMIN_EMAIL : ${{secrets.ADMIN_EMAIL}}
 
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - name: Set timezone to KST
+        run: |
+          sudo timedatectl set-timezone Asia/Seoul
+          echo "Current time: $(date)"
+          echo "Java timezone will be set to: Asia/Seoul"
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -34,6 +41,18 @@ jobs:
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+
+      - name: Verify timezone and run tests with JaCoCo
+        run: |
+          echo "=== Timezone Verification ==="
+          echo "System timezone: $(timedatectl show --property=Timezone --value)"
+          echo "Current date/time: $(date)"
+          echo "Java timezone: $JAVA_OPTS"
+          echo "=========================="
+          ./gradlew clean test jacocoTestReport
+        env:
+          TZ: Asia/Seoul
+          JAVA_TOOL_OPTIONS: -Duser.timezone=Asia/Seoul
 
       - name: Run tests with JaCoCo
         run: |
