--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -55,3 +55,24 @@ batch:
       enabled: false
     token-cleanup:
       enabled: false
+
+cloud:
+  aws:
+    credentials:
+      access-key: test-access-key
+      secret-key: test-secret-key
+    s3:
+      bucket: test-bucket
+      region: ap-northeast-2
+    region:
+      static: ap-northeast-2
+    stack:
+      auto: false
+
+# 테스트용 파일 업로드 설정
+file:
+  upload:
+    clothes:
+      path: test/clothes/images/
+      allowed-extensions: jpg,jpeg,png,gif,webp
+      max-size: 10485760  # 10MB
