--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -145,6 +145,11 @@ file:
       path: clothes/images/
       allowed-extensions: jpg,jpeg,png,gif,webp
       max-size: 10485760  # 10MB
+    profiles:
+      path: profiles/images/
+      allowed-extensions: jpg,jpeg,png,gif,webp
+      max-size: 10485760  # 10MB
+
 
 management:
   info:
