--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -14,16 +14,8 @@ logging:
 
 cloud:
   aws:
-    credentials:
-      access-key: ${AWS_ACCESS_KEY}
-      secret-key: ${AWS_SECRET_KEY}
     s3:
-      bucket: ${AWS_S3_PROD_BUCKET:ozang-prod-bucket}
-      region: ${AWS_REGION:ap-northeast-2}
-    region:
-      static: ${AWS_REGION:ap-northeast-2}
-    stack:
-      auto: false
+      bucket: ozang-prod-bucket
 
 # 운영환경 파일 업로드 설정
 file:
