--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -51,6 +51,8 @@ spring:
             token-uri: https://kauth.kakao.com/oauth/token
             user-info-uri: https://kapi.kakao.com/v2/user/me
             user-name-attribute: id
+  elasticsearch:
+    uris: http://localhost:9200
 
   jpa:
     hibernate:
@@ -67,6 +69,9 @@ spring:
       enabled: true
       path: /h2-console
 
+  profiles:
+    active: dev
+
 batch:
   weather:
     retention-days: 30  # 날씨 데이터 보관 기간 (일)
@@ -78,7 +83,7 @@ batch:
       token-cleanup:
         enabled: true  # JWT 토큰 정리 스케줄러 활성화
 
-# Spring Batch 기본 설정
+  # Spring Batch 기본 설정
   batch:
     job:
       enabled: false #애플리케이션 시작 시 배치 작업 자동 실행 여부
@@ -93,6 +98,7 @@ logging:
     org.springframework.batch: INFO
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+    org.elasticsearch.client: trace
 
 weather:
   api:
@@ -124,6 +130,28 @@ security:
 
 app:
   timezone: Asia/Seoul
+
+cloud:
+  aws:
+    credentials:
+      access-key: ${AWS_ACCESS_KEY}
+      secret-key: ${AWS_SECRET_KEY}
+    region:
+      static: ap-northeast-2
+    stack:
+      auto: false
+
+# 이미지 업로드 설정
+file:
+  upload:
+    clothes:
+      path: clothes/images/
+      allowed-extensions: jpg,jpeg,png,gif,webp
+      max-size: 10485760  # 10MB
+    profiles:
+      path: profiles/images/
+      allowed-extensions: jpg,jpeg,png,gif,webp
+      max-size: 10485760  # 10MB
 
 
 management:
