--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -96,6 +96,8 @@ logging:
     org.springframework.batch: INFO
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+    com.fourthread.ozang.module.domain.weather.batch: DEBUG
+    com.fourthread.ozang.module.config.batch: INFO
 
 weather:
   api:
@@ -105,6 +107,12 @@ weather:
       url: ${weather.api.base-url}/getUltraSrtNcst
     forecast:
       url: ${weather.api.base-url}/getVilageFst
+    timeout:
+      connection: 5000  # 연결 타임아웃 (ms)
+      read: 10000       # 읽기 타임아웃 (ms)
+      retry:
+        max-attempts: 3   # 최대 재시도 횟수
+        delay: 1000       # 재시도 지연 시간 (ms)
 
 kakao:
   api:
@@ -166,6 +174,12 @@ management:
     web:
       exposure:
         include: "*"
+  metrics:
+    tags:
+      application: ${spring.application.name}
+    health:
+      batch:
+        enabled: true
 
 server:
   tomcat:
