--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -80,6 +80,14 @@ batch:
         enabled: true  # 날씨 데이터 정리 스케줄러 활성화
       token-cleanup:
         enabled: true  # JWT 토큰 정리 스케줄러 활성화
+    sync:
+      chunk-size: 10
+      retry-limit: 3
+      recommendation:
+        cache-ttl-hours: 24
+      alert:
+        heat-threshold: 33
+        cold-threshold: -12
 
 # Spring Batch 기본 설정
   batch:
@@ -96,6 +104,8 @@ logging:
     org.springframework.batch: INFO
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+    com.fourthread.ozang.module.domain.weather.batch: DEBUG
+    com.fourthread.ozang.module.config.batch: INFO
 
 weather:
   api:
@@ -105,6 +115,12 @@ weather:
       url: ${weather.api.base-url}/getUltraSrtNcst
     forecast:
       url: ${weather.api.base-url}/getVilageFst
+    timeout:
+      connection: 5000  # 연결 타임아웃 (ms)
+      read: 10000       # 읽기 타임아웃 (ms)
+      retry:
+        max-attempts: 3   # 최대 재시도 횟수
+        delay: 1000       # 재시도 지연 시간 (ms)
 
 kakao:
   api:
@@ -166,6 +182,12 @@ management:
     web:
       exposure:
         include: "*"
+  metrics:
+    tags:
+      application: ${spring.application.name}
+    health:
+      batch:
+        enabled: true
 
 server:
   tomcat:
