--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -7,6 +7,11 @@ spring:
     password:
     driver-class-name: org.h2.Driver
 
+  data:
+    elasticsearch:
+      repositories:
+        enabled: false
+
   autoconfigure:
     exclude:
       - org.springframework.boot.autoconfigure.data.elasticsearch.ElasticsearchDataAutoConfiguration
