--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -7,6 +7,8 @@ spring:
     password:
     driver-class-name: org.h2.Driver
 
+  elasticsearch:
+    uris: http://localhost:9200
   data:
     elasticsearch:
       repositories:
