--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -7,6 +7,7 @@ spring:
     password:
     driver-class-name: org.h2.Driver
 
+  # Elasticsearch 완전 비활성화
   elasticsearch:
     uris: http://localhost:9200
   data:
@@ -19,6 +20,7 @@ spring:
       - org.springframework.boot.autoconfigure.data.elasticsearch.ElasticsearchDataAutoConfiguration
       - org.springframework.boot.autoconfigure.data.elasticsearch.ElasticsearchRepositoriesAutoConfiguration
       - org.springframework.boot.autoconfigure.elasticsearch.ElasticsearchClientAutoConfiguration
+      - org.springframework.boot.autoconfigure.data.elasticsearch.ReactiveElasticsearchRepositoriesAutoConfiguration
 
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
@@ -39,12 +41,14 @@ spring:
 
 logging:
   level:
-    root: info
+    root: warn
     org.hibernate.SQL: debug
     org.hibernate.type.descriptor.sql: trace
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
     org.hibernate.engine.jdbc.spi.SqlExceptionHelper: DEBUG
-    com.discodeit: debug
+    com.fourthread.ozang: debug
+    org.springframework.data.elasticsearch: off
+    org.elasticsearch: off
 
 weather:
   api:
