--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,36 +1,65 @@
+spring:
+  datasource:
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+    open-in-view: false
+
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
+
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      database: 0
+
 batch:
   weather:
-    retention-days: 3  # 개발환경에서는 3일만 보관
+    retention-days: 3
   scheduler:
     weather-cleanup:
       enabled: true
     token-cleanup:
       enabled: true
+  job:
+    enabled: false
+  jdbc:
+    initialize-schema: embedded
 
 logging:
   level:
-    com.fourthread.ozang.module.config.batch: DEBUG
+    root: INFO
+    com.fourthread.ozang: DEBUG
+    org.springframework.web: DEBUG
+    org.springframework.batch: INFO
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
 
 cloud:
   aws:
     s3:
       bucket: ozang-dev-bucket
 
-# 파일 업로드 설정
 file:
   upload:
     clothes:
       path: dev/clothes/images/
       allowed-extensions: jpg,jpeg,png,gif,webp
-      max-size: 10485760  # 10MB
+      max-size: 10485760
     profiles:
       path: dev/profiles/images/
       allowed-extensions: jpg,jpeg,png,gif,webp
-      max-size: 10485760  # 10MB
-
-
-spring:
-  servlet:
-    multipart:
-      max-file-size: 10MB
-      max-request-size: 10MB
+      max-size: 10485760
