--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,37 +1,65 @@
+spring:
+  datasource:
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    hibernate:
+      ddl-auto: validate
+    show-sql: false
+    properties:
+      hibernate:
+        format_sql: false
+    open-in-view: false
+
+  servlet:
+    multipart:
+      max-file-size: 5MB
+      max-request-size: 5MB
+
+  data:
+    redis:
+      host: ${REDIS_HOST}
+      port: 6379
+      database: 0
+
 batch:
   weather:
-    retention-days: 14  # 운영환경에서는 14일 보관
+    retention-days: 14
   scheduler:
     weather-cleanup:
       enabled: true
     token-cleanup:
       enabled: true
+  job:
+    enabled: false
+  jdbc:
+    initialize-schema: embedded
 
 logging:
   level:
+    root: WARN
     org.springframework.batch: WARN
-    com.fourthread.ozang.module.config.batch: INFO
+    com.fourthread.ozang: INFO
 
 cloud:
   aws:
     s3:
       bucket: ozang-prod-bucket
 
-# 운영환경 파일 업로드 설정
 file:
   upload:
     clothes:
       path: prod/clothes/images/
       allowed-extensions: jpg,jpeg,png,gif,webp
-      max-size: 5242880  # 5MB (운영환경에서는 더 작게)
+      max-size: 5242880
     profiles:
       path: prod/profiles/images/
       allowed-extensions: jpg,jpeg,png,gif,webp
-      max-size: 5242880  # 5MB
+      max-size: 5242880
 
-
-spring:
-  servlet:
-    multipart:
-      max-file-size: 5MB
-      max-request-size: 5MB
+server:
+  port: 80
