--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -7,6 +7,12 @@ spring:
     password:
     driver-class-name: org.h2.Driver
 
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      database: 0
+
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
