--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,7 @@ jobs:
           --health-timeout=5s
           --health-retries=5
     env:
+      SPRING_PROFILES_ACTIVE: test
       GRADLE_OPTS: -Dorg.gradle.daemon=false
       TZ: Asia/Seoul
       JAVA_OPTS: -Duser.timezone=Asia/Seoul
