--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -15,6 +15,10 @@ spring:
     elasticsearch:
       repositories:
         enabled: false
+    redis:
+      host: localhost
+      port: 6379
+      database: 0
 
   autoconfigure:
     exclude:
