--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -31,7 +31,7 @@ spring:
     properties:
       hibernate:
         jdbc:
-          time_zone: UTC
+          time_zone: Asia/Seoul
       type_descriptor:
         sql_uuid: true
     open-in-view: false
