--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -4,6 +4,13 @@ spring:
     username: ${SPRING_DATASOURCE_USERNAME}
     password: ${SPRING_DATASOURCE_PASSWORD}
     driver-class-name: org.postgresql.Driver
+    hikari:
+      maximum-pool-size: 20
+      minimum-idle: 5             # 유휴 연결 수 유지
+      connection-timeout: 30000   # 연결 획득 타임아웃(30초)
+      idle-timeout: 300000        # 유휴 연결 제거 시간(5분)
+      max-lifetime: 1200000       # 연결 최대 수명(20분)
+      leak-detection-threshold: 60000  # 연결 누수 감지(60초)
 
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
@@ -25,6 +32,11 @@ spring:
       host: ${REDIS_HOST}
       port: 6379
       database: 0
+      lettuce:
+        pool:
+          max-active: 4
+          max-idle: 4
+          min-idle: 1
 
 batch:
   weather:
