chore: elasticsearch 비활성화 설정

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -37,14 +37,20 @@ spring:
           max-active: 4
           max-idle: 4
           min-idle: 1
+# Elasticsearch 비활성화
+    elasticsearch:
+      repositories:
+        enabled: false
 
-  elasticsearch:
-    uris: ${ELASTICSEARCH_HOST:http://localhost:9200}
-    autoconfigure:
-      exclude:
-        - org.springframework.boot.autoconfigure.data.elasticsearch.ElasticsearchDataAutoConfiguration
-        - org.springframework.boot.autoconfigure.data.elasticsearch.ElasticsearchRepositoriesAutoConfiguration
-        - org.springframework.boot.autoconfigure.elasticsearch.ElasticsearchClientAutoConfiguration
+  autoconfigure:
+    exclude:
+      - org.springframework.boot.autoconfigure.data.elasticsearch.ElasticsearchDataAutoConfiguration
+      - org.springframework.boot.autoconfigure.data.elasticsearch.ElasticsearchRepositoriesAutoConfiguration
+      - org.springframework.boot.autoconfigure.elasticsearch.ElasticsearchClientAutoConfiguration
+      - org.springframework.boot.autoconfigure.data.elasticsearch.ReactiveElasticsearchRepositoriesAutoConfiguration
+# Elasticsearch 기능 활성화 플래그
+elasticsearch:
+  enabled: false
 
 batch:
   weather:
